--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<head>
-<body>
-<h1>Hello World</h1> 
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</head>
+<html>
+    <head>
+        <title>MTH4000 exercise</title> 
+    </head>
+    <body>
+        MTH4000 is the Programming in Python I module
+    </body>
+</html>
